examples/gateway-api-inference-extension/destinationrule-falcon-7b-instruct.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: falcon-7b-instruct-inferencepool-epp
spec:
  host: falcon-7b-instruct-inferencepool-epp
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
