examples/gateway-api-inference-extension/destinationrule-phi-4-mini-instruct-mri.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: phi-4-mini-instruct-mri-epp
  namespace: kaito-workspace
spec:
  host: phi-4-mini-instruct-inferencepool-epp.kaito-workspace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
