examples/gateway-api-inference-extension/httproute-bbr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
  rules:
  - matches:
    - headers:
      - type: Exact
        name: X-Gateway-Model-Name
        value: phi-4-mini-instruct
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: phi-4-mini-inferencepool
      group: inference.networking.k8s.io
      kind: InferencePool
  - matches:
    - headers:
      - type: Exact
        name: X-Gateway-Model-Name
        value: mistral-7b-instruct
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mistral-7b-instruct-inferencepool
      group: inference.networking.k8s.io
      kind: InferencePool
