examples/gateway-api-inference-extension/httproute-mri.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phi-4-mini-instruct-mri
  namespace: kaito-workspace
spec:
  parentRefs:
  - name: inference-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: phi-4-mini-instruct-inferencepool
      port: 8080
